# encypher-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  FEATURE_MATRIX.md  GEMINI.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MICROSERVICES_FEATURES.md  QUICK_START_GUIDE.md  README.md  STREAMING_FEATURES_SUMMARY.md  TODO.md  agents.md  agents_linux.md  conftest.py  dashboard_example_report.csv  debug_mfa_flow.mjs  docker-compose.full-stack.yml  docker-compose.https.yml  docker-compose.microservices.yml  fix_dashboard_mfa.mjs  fix_login_page.mjs  fix_login_page2.mjs  fix_login_page_error.mjs  fix_login_page_mfa_flow.mjs  generate_demo_key.py  mkdocs.yml  mypy.ini  plan.md  publish.py  pyproject.toml  pytest.ini  railway.json  report.csv  (+35 more)
audit_log_cli/: Dockerfile  README.md  __init__.py  agents.md  dashboard_example_report.csv  main.py  pyproject.toml  test_report.csv
audit_log_cli/app/: __init__.py  main.py
audit_log_cli/tests/: create_example_files.py  create_simple_tampered_examples.py  create_tampered_examples.py  run_tests.py  test_main.py  test_pdf_unicode.py  test_shared_library.py
c2pa-text/rust/: Cargo.toml  README.md
dashboard_app/backend/: .env.example  Dockerfile  README.md  alembic.ini  encypherai_dashboard.db  pyproject.toml
enterprise_api/: .env.example  .gitignore  Dockerfile  Dockerfile.benchmark  IMPLEMENTATION_SUMMARY.md  LICENSING_IMPLEMENTATION.md  Procfile  README.md  README_SPACY_INSTALL.md  REFACTORING_SUMMARY.md  STREAMING_IMPLEMENTATION_COMPLETE.md  add_c2pa_columns.py  agents.md  check_schema.py  check_spacy_in_pytest.py  populate_keys.py  postgresql_performance.conf  pyproject.toml  pytest.ini  railway.json  requirements-dev.txt  requirements.txt  run_benchmark_docker.ps1  test_invisible_chars_word.py  test_licensing_implementation.py  test_spacy.py  test_spacy_import.py
enterprise_api/alembic/: env.py
enterprise_api/app/: __init__.py  config.py  config_performance.py  database.py  dependencies.py  encypherai-commercial.code-workspace  main.py
enterprise_api/docs/: API.md  API_CONTRACT_CLIENT_READINESS.md  BENCHMARK_BASELINE.md  BYOK_CERTIFICATES.md  DATA_INTEGRITY_AUDITABILITY.md  DEPLOYMENT.md  DISASTER_RECOVERY_RUNBOOK.md  INTERNAL_TEXT_NORMALIZATION_HASHING_OFFSETS_SSOT.md  KEY_MANAGEMENT_READINESS.md  LEGACY_SAFE_ENCODING.md  LICENSING_API.md  MERKLE_ASSERTION_SCHEMA.md  OBSERVABILITY_INCIDENT_RESPONSE.md  PERFORMANCE_SCALE.md  PRIVACY_RETENTION_POLICY.md  QUICKSTART.md  RELEASE_READINESS.md  RELIABILITY_RESILIENCE.md  SECURITY_REVIEW_CHECKLIST.md  STREAMING_API.md  TESTING_GUIDE.md  TESTING_VALIDATION.md  THREAT_MODEL.md  USAGE_ANALYTICS_REPORTING.md  VERIFICATION_TRUST_MODEL.md  ZW_EMBEDDING_MODE.md  ZW_VS_RENDERING_RESEARCH.md  openapi.json  openapi_new.json
enterprise_api/examples/: websocket_client.js  websocket_client.py
enterprise_api/migrations/: 006_create_merkle_roots.sql  007_create_merkle_subhashes.sql  008_create_merkle_proof_cache.sql  009_create_attribution_reports.sql  010_alter_organizations_for_tiers.sql  011_create_content_references.sql  012_create_c2pa_tables.sql  013_add_user_id_to_organizations.sql  014_add_missing_organization_columns.sql  015_add_public_key_to_organizations.sql  015_ensure_organization_usage_columns.sql  016_add_error_logs_and_public_keys.sql  017_add_webhooks.sql  018_add_default_c2pa_template_id.sql  019_add_ai_company_licensing_tables.sql  020_add_status_list_tables.sql  021_add_fuzzy_fingerprints.sql  022_consolidate_tiers_add_addons.sql  023_add_webhook_secret_encrypted.sql  LEGACY_PEM_KEYS_GUIDE.md  MIGRATION_015_SUMMARY.md  RUN_MIGRATION_015.md  rollback_011_content_references.sql  rollback_012_c2pa_tables.sql  rollback_merkle_tables.sql
enterprise_api/output/: pdf_roundtrip_report.txt
enterprise_api/scripts/: README.md  apply_postgres_tuning.ps1  batch_smoke.py  bench_batch_async.py  bench_c2pa.ps1  bench_embeddings.ps1  bench_embeddings_optimized.ps1  bench_helpers.ps1  bench_merkle.ps1  benchmark_5k_comparison.py  clean_test_artifacts.ps1  diagnose_bottleneck.ps1  docker-entrypoint.sh  generate_security_doc.py  init_and_seed.py  init_db.py  init_db.sql  init_sqlite_merkle.sql  monitor_performance.ps1  populate_demo_public_key.py  prep_submission_folder.py  prune_batch_requests.py  run_load_test.py  run_merkle_migrations.py  run_tests.ps1  seed_c2pa_data.py  seed_encypher_times.py  seed_load_test_data.sql  seed_test_data.sql  sign_blog_posts.py  sign_html_cms.py  start_api.ps1  start_api_with_logs.ps1  start_test_server.py  truncate_content_refs.py  validate_openapi.py  verify_embeddings.ps1  verify_merkle_tables.py
enterprise_api/tests/: TEST_MIGRATION.md  conftest.py  debug_word_corruption.py  debug_zw_response.py  interactive_word_test.py  rendering_test.html  test_account.py  test_admin.py  test_alembic_revision_chain.py  test_all_invisible_chars.py  test_analytics_usage_schema_contract.py  test_api_feature_augmentation.py  test_api_key_auth.py  test_app_bootstrap_structure.py  test_attestation_policies.py  test_audio_signing.py  test_audit_api.py  test_audit_logs_migration_idempotency.py  test_auth_performance.py  test_auth_service_client.py  test_auto_provision_signing_key.py  test_base4_word_safe.py  test_batch_backfill_addon.py  test_batch_endpoints.py  test_batch_hardening.py  test_batch_requests_migration_idempotency.py  test_batch_service.py  test_billing_chain_migration_idempotency.py  test_binary_guard.py  test_builtin_c2pa_templates.py  test_bulk_invite.py  test_byok_addon_gating.py  test_byok_public_keys.py  test_c2pa_api.py  test_c2pa_conformance_sign_verify.py  test_c2pa_created_assertions_conformance.py  test_c2pa_performance.py  test_c2pa_spec_compliance.py  test_c2pa_text_exclusions_byte_offsets.py  test_c2pa_tier_gating.py  (+174 more)
enterprise_sdk/: README.md  README_OLD.md  SDK_WBS.md  pyproject.toml
policy_validator_cli/: Dockerfile  README.md  agents.md  main.py  pyproject.toml  sample.policy.json
shared_commercial_libs/: README.md  main.py  pyproject.toml
(+5946 files in other folders)
