[project]
name = "encypherai-commercial-monorepo"
version = "0.1.0"
description = "Root project file for EncypherAI commercial tools. This primarily serves as a marker for UV and may contain shared development dependencies."
requires-python = ">=3.9"
dependencies = [
    "encypher-ai",
    "encypher-enterprise",
    "comtypes>=1.4.11",
    "docx2txt>=0.9",
    "fpdf>=1.7.2",
    "pdfminer-six>=20250506",
    "pikepdf>=9.8.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "pywin32>=310",
    "reportlab>=4.4.1",
    "wikiextractor>=3.0.6",
]

[tool.uv]

[tool.uv.workspace]
members = ["audit_log_cli", "policy_validator_cli", "dashboard_app/backend", "shared_commercial_libs", "enterprise_api", "enterprise_sdk"]

[tool.uv.sources]
encypher-ai = { path = "./encypher-ai", editable = true }
encypher-enterprise = { workspace = true }
"encypher_commercial_shared" = { workspace = true }

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "real_db: marks tests that require a live database"
]
