[project]
name = "encypherai-commercial-monorepo"
version = "0.1.0"
description = "Root project file for Encypher commercial tools. This primarily serves as a marker for UV and may contain shared development dependencies."
requires-python = ">=3.9"
dependencies = [
    "encypher-ai",
    "docx2txt>=0.9",
    "fpdf>=1.7.2",
    "pdfminer-six>=20250506",
    "pikepdf>=9.8.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "reportlab>=4.4.1",
    "wikiextractor>=3.0.6",
    "pywin32>=310 ; sys_platform == 'win32'",
    "comtypes>=1.4.11 ; sys_platform == 'win32'",
]

[tool.uv]

[tool.uv.workspace]
members = ["audit_log_cli", "policy_validator_cli", "dashboard_app/backend", "shared_commercial_libs", "enterprise_api"]

[tool.uv.sources]
encypher-ai = { path = "./encypher-ai", editable = true }
c2pa-text = { path = "./c2pa-text/python", editable = true }
"encypher_commercial_shared" = { workspace = true }

# Ruff config is in ruff.toml at repo root

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "real_db: marks tests that require a live database"
]

[dependency-groups]
dev = [
    "rich>=14.2.0",
]
