[project]
name = "encypherai-commercial-monorepo"
version = "0.1.0"
description = "Root project file for Encypher commercial tools. This primarily serves as a marker for UV and may contain shared development dependencies."
requires-python = ">=3.9"
dependencies = [
    "encypher-ai",
    "comtypes>=1.4.11; platform_system == 'Windows'",
    "docx2txt>=0.9",
    "fpdf>=1.7.2",
    "pdfminer-six>=20250506",
    "pikepdf>=9.8.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "pywin32>=310; platform_system == 'Windows'",
    "reportlab>=4.4.1",
    "wikiextractor>=3.0.6",
    "pywin32>=310 ; sys_platform == 'win32'",
    "comtypes>=1.4.11 ; sys_platform == 'win32'",
    "pypdf>=6.7.5",
    "reedsolo>=1.7.0",
]

[tool.uv]

[tool.uv.workspace]
members = [
    "audit_log_cli",
    "policy_validator_cli",
    "dashboard_app/backend",
    "shared_commercial_libs",
    "enterprise_api",
    "tools/xml-to-pdf",
    "tools/encypher-pdf",
    "tools/sign-verify-app",
]

[tool.uv.sources]
encypher-ai = { path = "./encypher-ai", editable = true }
c2pa-text = { path = "./c2pa-text/python", editable = true }
"encypher_commercial_shared" = { workspace = true }

# Ruff config is in ruff.toml at repo root

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "real_db: marks tests that require a live database"
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "rich>=14.2.0",
    "ruff>=0.14.11",
]
