[project]
name = "encypher-enterprise-api"
version = "1.0.2"
description = "Enterprise API for C2PA-compliant content signing and verification"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "cryptography>=42.0.0",
    "bcrypt>=4.1.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.3",
    "python-multipart==0.0.22",
    "python-dotenv>=1.0.0",
    "encypher-ai",
    "spacy>=3.8.7",
    "websockets>=15.0.1",
    "redis>=5.0.0",
    "aioredis>=2.0.1",
    "sse-starlette>=3.0.3",
    "beautifulsoup4>=4.14.2",
    "email-validator>=2.1.0",
    "jsonschema>=4.24.0",
    "mako>=1.3.10",
    "alembic>=1.13.0",
    "starlette>=0.49.1,<1.0.0",
    "requests>=2.32.4",
    "urllib3>=2.6.3",
    "aiohttp>=3.13.3",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "cbor2>=5.8.0",
    "filelock>=3.20.1",
    "pdfminer-six>=20251230",
    "pypdf==6.6.2",
    "reedsolo>=1.7.0",
    "pyjwt>=2.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "faker>=19.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "real_db: marks tests that require a live PostgreSQL database",
]
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 150
target-version = "py39"

[tool.ruff.lint]
ignore = ["E402", "E501", "E701", "E712", "E722", "E741", "E902", "F401", "F811", "F841", "B904", "B005"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
encypher-ai = { path = "../encypher-ai", editable = true }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "docker>=7.1.0",
    "en-core-web-sm",
    "numpy>=2.0.2",
    "pip-audit>=2.9.0",
    "pipdeptree>=2.28.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.14.11",
    "websockets>=15.0.1",
]
