[project]
name = "policy-validator-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "encypher-ai>=2.1.0",
    "rich>=14.0.0",
    "typer>=0.12.0,<1.0.0",
]

[tool.ruff]
line-length = 150
target-version = "py39"

[tool.ruff.lint]
ignore = ["E402", "E701", "E712", "E722", "E741", "F401", "F811", "F841", "B904", "B005"]
