[project]
name = "encypher_commercial_shared"
version = "0.1.0"
description = "Shared commercial libraries for EncypherAI tools."
requires-python = ">=3.9"
authors = [
    {name = "EncypherAI Inc.", email = "dev@encypher.ai"},
]
readme = "README.md"
dependencies = [
    "encypher-ai>=2.2.0,<3.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pypdf2>=3.0.1",
    "docx2txt>=0.9",
    "python-docx>=1.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.0.200"
]

[dependency-groups]
dev = [
    "pip-audit>=2.9.0",
    "pipdeptree>=2.28.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
