[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asyncpg>=0.30.0",
    "encypher-ai>=2.1.0",
    "fastapi>=0.115.12",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.11.5",
    "pyjwt>=2.11.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.22",
    "reportlab>=4.4.1",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.34.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.ruff]
line-length = 150
target-version = "py39"

[tool.ruff.lint]
ignore = [
    "E402",  # module-import-not-at-top - needed for path manipulation
    "E501",  # line-too-long - handled by line-length
    "E701",  # multiple-statements - sometimes used for compact code
    "E712",  # true-false-comparison - SQLAlchemy requires == True/False
    "E722",  # bare-except - sometimes needed
    "E741",  # ambiguous-variable-name - sometimes l/O are appropriate
    "F401",  # unused-import - conditional imports for availability checks
    "F821",  # undefined-name - false positives with conditional imports
    "F841",  # unused-variable - sometimes intentional
    "B005",  # strip-with-multi-characters - sometimes intentional
    "B904",  # raise-without-from - not always needed
]
