[package]
name = "encypher"
version = "1.0.0-alpha.1"
authors = ["Encypher <sdk@encypherai.com>"]
description = "Official Rust SDK for Encypher Enterprise API - C2PA content signing and verification"
license = "MIT"
edition = "2021"
homepage = "https://encypherai.com"
repository = "https://github.com/encypherai/sdk-rust"
documentation = "https://api.encypherai.com/docs"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
