[package]
name = "encypher"
version = "1.0.0-alpha.1"
authors = ["Encypher <sdk@encypherai.com>"]
description = "C2PA-compliant content signing and verification infrastructure for publishers, legal/finance firms, AI labs, and enterprises"
# Override this license by providing a License Object in the OpenAPI.
license = "MIT"
edition = "2021"
homepage = "https://encypherai.com"
repository = "https://github.com/encypherai/encypherai-commercial"
documentation = "https://api.encypherai.com/docs"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
