[project]
name = "api-gateway"
version = "0.1.0"
description = "Encypher API Gateway"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.112.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.2.1",
  "prometheus-fastapi-instrumentator>=6.1.0",
]

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
