[project]
name = "encypher-notification-service"
version = "1.1.0"
description = "Notification microservice for Encypher platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",
    "sqlalchemy>=2.0.25",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "prometheus-client>=0.23.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "structlog>=25.5.0",
    "python-json-logger>=4.0.0",
    "alembic>=1.13.0",
    "encypher-commercial-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 150
target-version = "py311"

[tool.ruff.lint]
ignore = ["E402", "E701", "E712", "E722", "E741", "F401", "F841", "B904", "B005"]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]

[tool.uv.sources]
encypher-commercial-shared = { path = "shared_libs", editable = true }
