[project]
name = "spread-spectrum-ecc"
version = "0.1.0"
description = "Concatenated ECC for spread-spectrum watermarking"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "reedsolo>=1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["spread_spectrum_ecc.py"]

[dependency-groups]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
