[project]
name = "video-watermark-service"
version = "0.1.0"
description = "Spread-spectrum video watermarking microservice"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "numpy>=1.24",
    "av>=12.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "reedsolo>=1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.25", "ruff>=0.4"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "httpx>=0.25",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
