[project]
name = "web-service"
version = "0.2.0"
description = "Marketing website backend service for Encypher - handles demo requests, analytics, and sales contact forms"
authors = [{name = "Encypher Team", email = "contact@encypher.com"}]
license = {text = "Proprietary"}
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.109.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "uvicorn[standard]>=0.25.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.22",
    "email-validator>=2.1.0",
    "sqlalchemy>=2.0.23",
    "python-dotenv>=1.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "python-slugify>=8.0.1",
    "httpx>=0.26.0",
    "encypher-commercial-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 150
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "S", "B", "C4", "UP"]
ignore = ["S101", "S105", "S106", "B008"]  # Allow assert, hardcoded passwords, Depends() in defaults

[tool.ruff.lint.per-file-ignores]
"app/services/email.py" = ["E501"]  # Allow long lines in email templates
"app/api/v1/endpoints/*.py" = ["E501"]  # Allow long lines in log messages
"scripts/**" = ["E501"]  # Allow long lines in scripts

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v -s"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.uv.sources]
encypher-commercial-shared = { path = "shared_libs", editable = true }
