[project]
name = "encypher-cms-signing-kit"
version = "1.0.0"
description = "Sign CMS HTML pages with invisible, verifiable content credentials via the Encypher API."
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
encypher-sign-html = "encypher_sign_html:main"
