[project]
name = "encypher-pdf"
version = "0.1.0"
description = "Unicode-faithful PDF writer that preserves variation selectors and zero-width characters through copy-paste"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "fonttools>=4.50.0",
    "pymupdf>=1.24.0",
]

[project.scripts]
encypher-pdf = "encypher_pdf.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/encypher_pdf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
