[project]
name = "sign-verify-app"
version = "0.1.0"
description = "Local test app: sign existing PDFs and verify them"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "xml-to-pdf",
]

[project.scripts]
sign-verify-app = "sign_verify_app.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sign_verify_app"]

[tool.uv.sources]
xml-to-pdf = { workspace = true, editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
