[project]
name = "xml-to-pdf"
version = "0.1.0"
description = "XML-to-PDF rendering engine with embedded content provenance via EncypherAI enterprise API"
requires-python = ">=3.10"
dependencies = [
    "reportlab>=4.0",
    "httpx>=0.27",
    "lxml>=5.0",
    "fpdf2>=2.8.5",
    "pymupdf>=1.26.7",
    "encypher-pdf",
]

[project.scripts]
xml-to-pdf = "xml_to_pdf.cli:main"
sign-pdf = "xml_to_pdf.cli_sign_existing:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xml_to_pdf"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
encypher-pdf = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
