[project]
name = "encypher-commercial-shared"
version = "0.2.0"
description = "Shared commercial libraries for Encypher tools and services."
requires-python = ">=3.9"
authors = [
    {name = "Encypher Inc.", email = "dev@encypher.ai"},
]
readme = "README.md"
dependencies = [
    "encypher-ai>=3.0.4,<4.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pypdf2>=3.0.1",
    "docx2txt>=0.9",
    "python-docx>=1.1.2",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.0.200"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/encypher_commercial_shared"]

[tool.hatch.build.targets.sdist]
include = ["src/encypher_commercial_shared"]

[dependency-groups]
dev = [
    "pip-audit>=2.9.0",
    "pipdeptree>=2.28.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[tool.ruff]
line-length = 150
target-version = "py39"

[tool.ruff.lint]
ignore = ["E402", "E701", "E712", "E722", "E741", "F401", "F841", "B904", "B005", "B006"]
